--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -70,9 +70,23 @@ article {
     background: var(--primary-color);
 }
 
+.section-title {
+    margin-left: 30px;
+    color: #696d77;
+    font-size: 1.6rem;
+    line-height: 1.75;
+}
+
+.section-desc {
+    color: var(--third-primary-color);
+    font-size: 1.8rem;
+    line-height: 1.67;
+}
+
 /* Header */
 .header {
-    padding: 42px 0 10px;
+    padding: 42px 0 6px;
+    background: #fff;
 }
 
 .header.header__fixed {
@@ -87,7 +101,7 @@ article {
 }
 
 .navbar__list {
-    margin-left: 70px;
+    margin-left: 52px;
     display: flex;
 }
 
@@ -147,4 +161,352 @@ article {
 .header__sign-up {
     --height: 52px;
     min-width: 113px;
+}
+
+/* Hero */
+.hero {
+    padding: 70px 0;
+}
+
+.hero__inner {
+    display: flex;
+    align-items: center;
+}
+
+.hero-left {
+    width: 47%;
+}
+
+.hero__title {
+    position: relative;
+}
+
+.hero__title::before {
+    position: absolute;
+    display: block;
+    content: "";
+    top: 50%;
+    transform: translateX(-50%);
+    left: -21px;
+    width: 18px;
+    height: 2px;
+    background: #696d77;
+}
+
+.hero__heading {
+    margin-top: 12px;
+    color: var(--second-primary-color);
+    font-size: 6rem;
+    font-weight: 700;
+    line-height: 1.17;
+}
+
+.hero__heading-highlight {
+    color: var(--primary-color);
+}
+
+.hero__desc {
+    width: 540px;
+    margin-top: 20px;
+}
+
+/* Hero form */
+.hero-form {
+    margin-top: 40px;
+    padding-right: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 540px;
+    height: 74px;
+    border-radius: 8px;
+    background: #fff;
+    box-shadow: 0px 16px 42px 0px rgba(0, 0, 0, 0.07);
+}
+
+.hero-form__input {
+    padding: 23px;
+    width: 100%;
+    height: 100%;
+    outline: none;
+    border: none;
+    border-radius: inherit;
+}
+
+.hero-form__btn {
+    border: none;
+    outline: none;
+    cursor: pointer;
+}
+
+.hero__note {
+    margin-top: 20px;
+    color: var(--third-primary-color);
+    font-size: 1.4rem;
+    font-weight: 600;
+    line-height: 1.71;
+}
+
+/* Hero right */
+.hero__media {
+    position: relative;
+    margin-left: 160px;
+    width: 100%;
+}
+
+/* Hero phone */
+.hero-phone {
+    display: flex;
+    justify-content: center;
+    width: 296px;
+    height: 562px;
+    border-radius: 4rem;
+    border: 12px solid var(--second-primary-color);
+    background: #fff;
+}
+
+.hero-phone__inner {
+    position: relative;
+}
+
+.hero-phone__camera {
+    position: absolute;
+    content: "";
+    left: 50%;
+    top: -12px;
+    transform: translateX(-50%);
+    width: 144px;
+    height: 36px;
+    border-radius: 0rem 0rem 1.8rem 1.8rem;
+    background: #3c2f60;
+}
+
+.hero-card {
+    position: relative;
+    padding: 16px;
+    margin-top: 40px;
+    display: block;
+    width: 250px;
+    height: 150px;
+    border-radius: 2rem;
+    overflow: hidden;
+    background: linear-gradient(76deg, #8578e4 11.52%, #7264d6 70.78%);
+}
+
+.hero-card__column,
+.hero-card__bottom {
+    position: relative;
+    z-index: 1;
+}
+
+.hero-card__top {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+.hero-card__type {
+    color: #fff;
+    font-size: 1.4rem;
+    line-height: 1.36;
+}
+
+.hero-card__money {
+    margin-top: 2px;
+    color: #fff;
+    font-size: 2.2rem;
+    font-weight: 700;
+    line-height: 1.36;
+}
+
+.hero-card__bottom {
+    margin-top: 32px;
+}
+
+.hero-card__row {
+    margin-top: 5px;
+    display: flex;
+}
+
+.hero-card__desc {
+    margin-right: 12px;
+    color: #fff;
+    font-size: 1rem;
+    line-height: 1.4;
+}
+
+.hero-card__name,
+.hero-card__time {
+    margin-right: 36px;
+    color: #fff;
+    font-size: 1.2rem;
+    font-weight: 600;
+    line-height: 1.33;
+}
+
+.hero-card__decor,
+.hero-card__decor-2 {
+    position: absolute;
+}
+
+.hero-card__decor {
+    top: 0;
+    left: 1px;
+}
+
+.hero-card__decor-2 {
+    bottom: 0;
+    right: 0;
+}
+
+.hero-phone__row {
+    margin-top: 24px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.hero-phone__desc {
+    color: #31456a;
+    font-size: 1.6rem;
+    font-weight: 600;
+}
+
+.hero__list {
+    margin-top: 28px;
+}
+
+.hero-item {
+    display: flex;
+    align-items: center;
+    margin-bottom: 28px;
+}
+
+.hero-item__icon-wrap {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 8px;
+}
+
+.hero-item__info {
+    margin-left: 14px;
+    flex: 1;
+}
+
+.hero-item__row {
+    display: flex;
+    justify-content: space-between;
+}
+
+.hero-item__heading,
+.hero-item__money {
+    color: var(--second-primary-color);
+    font-size: 1.4rem;
+    font-weight: 600;
+    line-height: 1;
+}
+
+.hero-item__desc,
+.hero-item__time {
+    margin-top: 6px;
+    color: var(--third-primary-color);
+    font-size: 1rem;
+    line-height: 1;
+}
+
+/* Hero decoration */
+.hero-decor {
+    position: absolute;
+    display: flex;
+    align-items: center;
+}
+
+.hero-decor-1 {
+    top: 113px;
+    left: -100px;
+    padding: 14px 10px;
+    width: 174px;
+    height: 46px;
+    background: #fff;
+    border-radius: 6px;
+    box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.07);
+}
+
+.hero-decor-1__info {
+    margin-left: 8px;
+    display: flex;
+    flex: 1;
+    justify-content: space-between;
+}
+
+.hero-decor__desc {
+    color: #31456a;
+    font-size: 1.4rem;
+    font-weight: 600;
+    line-height: 1;
+}
+
+.hero-decor__value {
+    color: #4ab5e3;
+    font-size: 1.4rem;
+    line-height: 1;
+}
+
+.hero-decor-2 {
+    right: 85px;
+    bottom: 65px;
+    padding: 20px 14px;
+    width: 124px;
+    height: 68px;
+    border-radius: 10px;
+    background: #439f90;
+}
+
+.hero-decor__item {
+    display: flex;
+}
+
+.hero-decor__item-info {
+    margin-left: 11px;
+}
+
+.hero-decor__item-value {
+    color: #fff;
+    font-size: 1.4rem;
+    font-weight: 600;
+    line-height: 1;
+}
+
+.hero-decor__item-desc {
+    margin-top: 5px;
+    color: #fff;
+    font-size: 0.8rem;
+    line-height: 1;
+}
+
+.hero-decor-3 {
+    top: 127px;
+    right: -4px;
+    justify-content: center;
+    flex-direction: column;
+    width: 130px;
+    height: 130px;
+    border-radius: 50%;
+    background: #da6464;
+}
+
+.hero-decor-3__value {
+    color: #fff;
+    font-size: 4.4rem;
+    font-weight: 600;
+    line-height: 1.36;
+}
+
+.hero-decor-3__desc {
+    margin-top: -12px;
+    color: #fff;
+    font-size: 1.6rem;
+    line-height: 1.38;
 }
