--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -70,6 +70,14 @@ article {
     background: var(--primary-color);
 }
 
+.section-heading {
+    margin-top: 12px;
+    color: var(--second-primary-color);
+    font-size: 4rem;
+    font-weight: 700;
+    line-height: 1.25;
+}
+
 .section-title {
     margin-left: 30px;
     color: #696d77;
@@ -177,11 +185,13 @@ article {
     width: 47%;
 }
 
-.hero__title {
+.hero__title,
+.work__title {
     position: relative;
 }
 
-.hero__title::before {
+.hero__title::before,
+.work__title::before {
     position: absolute;
     display: block;
     content: "";
@@ -509,4 +519,104 @@ article {
     color: #fff;
     font-size: 1.6rem;
     line-height: 1.38;
+}
+
+/* Work */
+.work {
+    padding-top: 90px;
+}
+
+.work__inner {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+/* Work media */
+.work-media {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    width: 470px;
+}
+
+.work-media::after {
+    position: absolute;
+    content: url(../img/work-bg.svg);
+    inset: auto auto 0 0;
+    z-index: -1;
+}
+
+.work-media::before {
+    position: absolute;
+    display: block;
+    content: url(../img/work-decor.svg);
+    top: 76px;
+    right: 62px;
+    z-index: 1;
+}
+
+.work__img {
+    display: block;
+    width: 456px;
+    height: 619px;
+    object-fit: cover;
+}
+
+.work-decor {
+    position: absolute;
+    bottom: 96px;
+    right: -100px;
+    display: flex;
+    align-items: center;
+    padding: 15px;
+    width: 226px;
+    height: 70px;
+    border-radius: 8px;
+    background: #fffdfa;
+    box-shadow: 0px 14px 34px 0px rgba(0, 0, 0, 0.07);
+}
+
+.work-decor__heading {
+    color: #212832;
+    font-family: "Inter", sans-serif;
+    font-size: 1.4rem;
+    font-weight: 600;
+}
+
+.work-decor__content {
+    margin-left: 10px;
+}
+
+.work-decor__desc {
+    margin-top: 5px;
+    color: #696d76;
+    font-family: "Inter", sans-serif;
+    font-size: 1.2rem;
+}
+
+/* Work content */
+.work-content {
+    width: 40.2%;
+}
+
+.work__list {
+    margin-top: 70px;
+}
+
+.work-item__heading {
+    color: var(--second-primary-color);
+    font-size: 2.2rem;
+    font-weight: 600;
+    line-height: 1.45;
+}
+
+.work__item + .work__item {
+    margin-top: 30px;
+}
+
+.work-time__desc {
+    margin-top: 16px;
+    font-size: 1.6rem;
+    line-height: 1.75;
 }
