--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1126,3 +1126,106 @@ article {
     bottom: 49px;
     right: 166px;
 }
+
+/* Footer */
+.footer__inner {
+    background: #fafbff;
+    padding: 100px 0 28px;
+}
+
+.footer__row {
+    display: flex;
+    column-gap: 163px;
+}
+
+.footer__contact {
+    margin-top: 54px;
+    column-gap: 100px;
+}
+
+.footer__heading {
+    margin-top: 0;
+    color: var(--second-primary-color);
+    font-size: 1.8rem;
+    font-weight: 600;
+    line-height: 1.67;
+}
+
+.footer__list {
+    margin-top: 16px;
+}
+
+.footer__desc {
+    margin-top: 24px;
+}
+
+.footer__link,
+.footer__desc {
+    color: #6a6e78;
+    opacity: 0.75;
+}
+
+.footer__link {
+    display: block;
+    padding: 8px 0;
+}
+
+.footer__desc {
+    width: 371px;
+}
+
+.footer__cta {
+    margin-top: 48px;
+}
+
+/* Footer form */
+.footer-form {
+    margin-top: 24px;
+    display: flex;
+    align-items: center;
+    column-gap: 20px;
+}
+
+.footer-form__input {
+    padding: 10px;
+    width: 270px;
+    height: 52px;
+    border-radius: 6px;
+    border: 1px solid #8e919a;
+    outline: none;
+}
+
+.footer-form__input::placeholder {
+    color: #8e919a;
+    font-size: 1.6rem;
+    line-height: 1.75;
+    opacity: 0.7;
+}
+
+.footer__btn {
+    --height: 52px;
+    min-width: 113px;
+    border: none;
+    outline: none;
+    cursor: pointer;
+}
+
+/* Footer contact */
+.footer__mail,
+.footer__phone {
+    color: #6a6e78;
+    text-decoration-line: underline;
+}
+
+/* Copyright */
+.footer__copyright-wrap {
+    background: var(--primary-color);
+    padding: 28px 0;
+    text-align: center;
+}
+
+.footer__copyright {
+    color: #fff;
+    font-size: 1.6rem;
+    line-height: 1.75;
+}
